--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,51 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Blank
-    </ion-title>
+<ion-header class="ion-no-border">
+  <ion-toolbar >
+    <ion-item lines="none">
+      <ion-title slot="start">PortFolio</ion-title>
+      <ion-segment (ionChange)="segmentChanged($event)" *ngIf="!device">
+        <ion-segment-button value="home">
+          <ion-label>Home</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="about">
+          <ion-label>About</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="skills">
+          <ion-label>Skills</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="works">
+          <ion-label>Works</ion-label>
+        </ion-segment-button>
+        <ion-segment-button value="contact">
+          <ion-label>Contact</ion-label>
+        </ion-segment-button>
+      </ion-segment>
+    </ion-item>
+
   </ion-toolbar>
+ 
 </ion-header>
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+<ion-content>
+<ion-router-outlet></ion-router-outlet>
 </ion-content>
+<ion-footer class="ion-no-border ion-text-center">
+  <ion-toolbar class="ion-text-center">
+    <ion-buttons class="ion-text-center">
+      <ion-button>
+        <ion-icon name="logo-github"></ion-icon>
+       </ion-button>
+       <ion-button>
+        <ion-icon name="logo-linkedin"></ion-icon>
+       </ion-button>
+       <ion-button >
+        <ion-icon name="logo-facebook"></ion-icon>
+       </ion-button>
+       <ion-button >
+        <ion-icon name="logo-twitter"></ion-icon>
+       </ion-button>
+       <ion-button >
+        <ion-icon name="logo-instagram"></ion-icon>
+       </ion-button>
+    </ion-buttons>
+ 
+  </ion-toolbar>
+</ion-footer>
