--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,27 +1,108 @@
-#container {
-  text-align: center;
+ion-content{
+  height:80vh;
+  width:100vw;
+  --background:  #b2b6b8;
+}
+ion-header{
+  --background:  #b2b6b8;
+  ion-item{
+    --background:  #b2b6b8;
+    ion-title{
+      font-family: 'Nerko One', cursive;
+    }
 
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  }
+
+  height:10vh;
+  width:100vw;
+
+}
+ion-footer{
+  --background:  #b2b6b8;
+  height:10vh;
+  width:100vw;
+
+  ion-toolbar{
+  
+    ion-buttons{
+    margin:auto;
+    display:block;
+      ion-button{
+        border-radius: 5px;
+        background: #b2b6b8;
+        box-shadow:  5px 5px 10px #7e8183, 
+                     -5px -5px 10px #e6ebed;
+                     margin-left:20px;
+      }
+    
+    }
+  }
+ 
+}
+*{
+  padding:0;
+  margin:0;
+  --background:  #b2b6b8;
+}
+ion-grid{
+
+  ion-row{
+  
+    padding-top:2.5vh;
+    height:75vh;
+    width:100vw;
+
+
+ion-col{
+
+  padding-top:2.5vh;
+
+  height:70vh;
+  width:100%;
+
+.intro{
+  padding-top:30vh;
+  padding-left:20vw;
+  .greeting{
+    font-family: 'Fredoka One', cursive;
+  }
+  .name{
+    font-family: 'Bowlby One SC', cursive;
+ 
+  }
+  .profession{
+    font-family: 'Nerko One', cursive;
+  }
+  
+ion-button{
+  
+  border-radius: 5px;
+background: #b2b6b8;
+box-shadow:  5px 5px 10px #7e8183, 
+             -5px -5px 10px #e6ebed;
+            color:black;
+}
+ 
+}
+  ion-img{
+    float: right;
+    height:70vh;
+    width:75%;
+  }
 }
 
-#container strong {
-  font-size: 20px;
-  line-height: 26px;
+  }
+}
+ion-segment-button{
+  ion-label{
+    font-family: 'Fredoka One', cursive;
+  }
 }
 
-#container p {
-  font-size: 16px;
-  line-height: 22px;
-
-  color: #8c8c8c;
-
-  margin: 0;
-}
-
-#container a {
-  text-decoration: none;
+.styles{
+  font-family: 'Bowlby One SC', cursive;
+font-family: 'Concert One', cursive;
+font-family: 'Fredoka One', cursive;
+font-family: 'Luckiest Guy', cursive;
+font-family: 'Nerko One', cursive;
 }
