--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,14 +1,14 @@
 <ion-content>
   <ion-grid fixed>
     <ion-row>
-      <ion-col size="12">
+      <ion-col>
            <ion-card>
          
              <ion-card-content>
                <ion-row>
       
              
-                <ion-col size="6">
+                <ion-col size-md="6" size-xs="12">
                   
                   <ion-card-subtitle>About Me</ion-card-subtitle>
                   <ion-card-title>Yusuf Khan</ion-card-title>
@@ -22,7 +22,7 @@
                  Download CV
                 </ion-button>
                 </ion-col>
-                <ion-col size="6">
+                <ion-col size-md="6" size-xs="12">
                   <ion-item lines="none">
                     <ion-label>
                       <h1>Develoment</h1>
@@ -49,10 +49,10 @@
       </ion-col>
     </ion-row>
     <ion-row class="services">
-      <ion-col size="12">
+      <ion-col size-md="12" size-xs="12">
         <ion-title>Services</ion-title>
       </ion-col>
-      <ion-col size="4">
+      <ion-col size-md="4" size-xs="12">
         <ion-card>
           <ion-card-content>
              <ion-img src="assets/img/rocket.png"></ion-img>
@@ -61,7 +61,7 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size="4">
+      <ion-col size-md="4" size-xs="12">
         <ion-card>
           <ion-card-content>
     
@@ -72,7 +72,7 @@
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size="4">
+      <ion-col size-md="4" size-xs="12">
         <ion-card>
           <ion-card-content>
        
@@ -88,10 +88,10 @@
       </ion-col>
     </ion-row>
     <ion-row>
-      <ion-col size="12">
+      <ion-col size-md="12" size-xs="12">
         <ion-title>Experience & Academics</ion-title>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size-md="6" size-xs="12">
         <ion-card>
           <ion-card-header>
            
@@ -99,30 +99,35 @@
           </ion-card-header>
           <ion-card-content>
         <ion-row>
-            <ion-col size="1">
+            <ion-col size-md="1" size-xs="1">
               <ion-icon name="book-sharp"></ion-icon>
               <div class="line"></div>
             </ion-col>
-            <ion-col size="11">
+            <ion-col size-md="11" size-xs="11">
               <ion-label>2015 - 19</ion-label>
-              <ion-title>Bachelors Degree</ion-title>
+              <br>
+              <ion-text>Bachelors Degree</ion-text>
+              <br>
               <ion-label>SSITS,Rayachoty</ion-label>
             </ion-col>
             <br>
-            <ion-col size="1">
+            <ion-col size-md="1" size-xs="1">
               <ion-icon name="book-sharp"></ion-icon>
               <div class="line"></div>
             </ion-col>
-            <ion-col size="11">
+            <ion-col size-md="11" size-xs="11">
               <ion-label>2014 - 15</ion-label>
-              <ion-title>Intermediate</ion-title>
+              <br>
+              <ion-text>Intermediate</ion-text>
+              <br>
               <ion-label>Govt Jr College,Mulakalacheruvu</ion-label>
+              
             </ion-col>
         </ion-row>
           </ion-card-content>
         </ion-card>
       </ion-col>
-      <ion-col size="6">
+      <ion-col size-md="6" size-xs="12">
         <ion-card>
           <ion-card-header>
            
@@ -130,23 +135,27 @@
           </ion-card-header>
           <ion-card-content>
         <ion-row>
-            <ion-col size="1">
+            <ion-col size-md="1" size-xs="1" >
               <ion-icon name="briefcase-sharp"></ion-icon>
               <div class="line"></div>
             </ion-col>
-            <ion-col size="11">
+            <ion-col size-md="11" size-xs="11" >
               <ion-label>2020 - 20</ion-label>
-              <ion-title>UI Developer</ion-title>
+              <br>
+              <ion-text>UI Developer</ion-text>
+              <br>
               <ion-label>Reliant Vision Pvt Ltd,Hyderabad</ion-label>
             </ion-col>
             <br>
-            <ion-col size="1">
+            <ion-col size-md="1" size-xs="1">
               <ion-icon name="briefcase-sharp"></ion-icon>
               <div class="line"></div>
             </ion-col>
-            <ion-col size="11">
+            <ion-col size-md="11" size-xs="11">
               <ion-label>2019 - 19</ion-label>
-              <ion-title>Full Stack Developer</ion-title>
+              <br>
+              <ion-text>Full Stack Developer</ion-text>
+              <br>
               <ion-label>XTreme IT Solutions Pvt Ltd,Hyderabad</ion-label>
             </ion-col>
         </ion-row>
