--- a/src/app/home/about/about.component.scss
+++ b/src/app/home/about/about.component.scss
@@ -23,6 +23,9 @@ h1{
 ion-title{
     font-family: 'Bowlby One SC', cursive;
 }
+ion-text{
+    font-family: 'Bowlby One SC', cursive;  
+}
 ion-label{
     font-family: 'Nerko One', cursive;
 }
