--- a/src/app/home/works/works.component.html
+++ b/src/app/home/works/works.component.html
@@ -17,7 +17,7 @@
                 malicious information
               </p>
               <ion-row>
-                <ion-col size="6">
+                <ion-col size-md="6" size-xs="6">
                   <ion-card>
                     <ion-card-content>
                        <ion-img src="assets/img/role.png"></ion-img>
@@ -26,7 +26,7 @@
                     </ion-card-content>
                   </ion-card>
                 </ion-col>
-                <ion-col size="6">
+                <ion-col size="6" size-md="6" size-xs="6">
                   <ion-card>
                     <ion-card-content>
                        <ion-img src="assets/img/timeperiod.png"></ion-img>
@@ -36,11 +36,12 @@
                   </ion-card>
                 </ion-col>
               </ion-row>
+             
               <ion-row>
-                <ion-col size="12">
+                <ion-col size="12"  size-xs="12">
                   <ion-title>Technologies Used:</ion-title>
                 </ion-col>
-                <ion-col size="12">
+                <ion-col size="12" size-xs="12">
                   <ion-buttons class="ion-text-center">
                     <ion-button>
                       <ion-icon name="logo-github"></ion-icon>
@@ -60,6 +61,11 @@
                   </ion-buttons>
                 </ion-col>
               </ion-row>
+              <ion-row>
+                <ion-col size-md="12" size-xs="12">
+                  <ion-button expand="block">Visit Project</ion-button>
+                </ion-col>
+                </ion-row>
             </ion-card-content>
           </ion-card>
         </ion-slide>
