--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -55,7 +55,7 @@
       <ion-col size-md="4" size-xs="12">
         <ion-card>
           <ion-card-content>
-             <ion-img src="assets/img/rocket.png"></ion-img>
+             <ion-img class="launch" src="assets/img/rocket.png"></ion-img>
            <h1>UI/UX Design</h1>
  
           </ion-card-content>
@@ -65,7 +65,7 @@
         <ion-card>
           <ion-card-content>
     
-             <ion-img src="assets/img/setings.png"></ion-img>
+             <ion-img class="rotate" src="assets/img/setings.png"></ion-img>
 
            <h1>Web Development</h1>
     
