--- a/src/app/home/contact/contact.component.scss
+++ b/src/app/home/contact/contact.component.scss
@@ -56,3 +56,6 @@ ion-button{
   font-family: 'Luckiest Guy', cursive;
   font-family: 'Nerko One', cursive;
   }
+  .sadicon{
+      color:red;
+  }
