--- a/src/app/home/works/works.component.html
+++ b/src/app/home/works/works.component.html
@@ -1,197 +1,237 @@
 <ion-content>
-  <ion-grid fixed >
-    <ion-row>
+
       <ion-slides pager="true" [options]="slideOpts">
         <ion-slide>
           <ion-card id="maincard">
             <ion-card-content>
-              <ion-card-header>
-                <ion-card-subtitle>Project</ion-card-subtitle>
-                <ion-card-title>Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
-              </ion-card-header>
-              <p>The project aim is to build a new credibility system called
-                <br> SOCI-RANK using the module Admin
-                to analyze the profile of user
-                <br> to rank with the credibility score that helps to prevent proliferation of fake or
-                
-                malicious information
-              </p>
-              <ion-row>
-                <ion-col size-md="6" size-xs="6">
-                  <ion-card>
-                    <ion-card-content>
-                       <ion-img src="assets/img/role.png"></ion-img>
-                     <h1>Role:<strong>Team Leader</strong></h1>
+              <ion-grid>
+                <ion-row id="headerrow">
+                  <ion-col size-md="12" size-xs="12" class="ion-text-center">
+                    <ion-card-header class="ion-text-center">
+                      <ion-card-subtitle class="ion-text-center">Project</ion-card-subtitle>
+                      <ion-card-title class="ion-text-center">Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
+                    </ion-card-header>
+                    <p class="ion-text-center">The project aim is to build a new credibility system called
+                      <br> SOCI-RANK using the module Admin
+                      to analyze the profile of user
+                      <br> to rank with the credibility score that helps to prevent proliferation of fake or
+                      
+                      malicious information
+                    </p>
+                  </ion-col>
+                    
+                  </ion-row>  
+                  <ion-row>
+                    <ion-col size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/role.png"></ion-img>
+                         <h1>Role:<strong>Team Leader</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                    <ion-col size="6" size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/timeperiod.png"></ion-img>
+                         <h1>Time Period: <strong>3 months</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12"  size-xs="12">
+                      <ion-text>Technologies Used:</ion-text>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12" size-xs="12">
+                      <ion-buttons class="ion-text-center">
+                        <ion-button>
+                          <ion-icon name="logo-github"></ion-icon>
+                         </ion-button>
+                         <ion-button>
+                          <ion-icon name="logo-linkedin"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-facebook"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-twitter"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-instagram"></ion-icon>
+                         </ion-button>
+                      </ion-buttons>
+                    </ion-col>
+                  </ion-row>
+               
+                  <ion-row>
+                    <ion-col size-md="12" size-xs="12">
+                      <ion-button expand="block">Visit Project</ion-button>
+                    </ion-col>
+                  </ion-row>
+              </ion-grid>
            
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-                <ion-col size="6" size-md="6" size-xs="6">
-                  <ion-card>
-                    <ion-card-content>
-                       <ion-img src="assets/img/timeperiod.png"></ion-img>
-                     <h1>Time Period: <strong>3 months</strong></h1>
-           
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-              </ion-row>
-             
-              <ion-row>
-                <ion-col size="12"  size-xs="12">
-                  <ion-title>Technologies Used:</ion-title>
-                </ion-col>
-                <ion-col size="12" size-xs="12">
-                  <ion-buttons class="ion-text-center">
-                    <ion-button>
-                      <ion-icon name="logo-github"></ion-icon>
-                     </ion-button>
-                     <ion-button>
-                      <ion-icon name="logo-linkedin"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-facebook"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-twitter"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-instagram"></ion-icon>
-                     </ion-button>
-                  </ion-buttons>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size-md="12" size-xs="12">
-                  <ion-button expand="block">Visit Project</ion-button>
-                </ion-col>
-                </ion-row>
             </ion-card-content>
           </ion-card>
         </ion-slide>
         <ion-slide>
           <ion-card id="maincard">
             <ion-card-content>
-              <ion-card-header>
-                <ion-card-subtitle>Project</ion-card-subtitle>
-                <ion-card-title>Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
-              </ion-card-header>
-              <p>The project aim is to build a new credibility system called
-                <br> SOCI-RANK using the module Admin
-                to analyze the profile of user
-                <br> to rank with the credibility score that helps to prevent proliferation of fake or
-                
-                malicious information
-              </p>
-              <ion-row>
-                <ion-col size="6">
-                  <ion-card >
-                    <ion-card-content>
-                       <ion-img src="assets/img/role.png"></ion-img>
-                     <h1>Role:<strong>Team Leader</strong></h1>
+              <ion-grid>
+                <ion-row id="headerrow">
+                  <ion-col size-md="12" size-xs="12" class="ion-text-center">
+                    <ion-card-header class="ion-text-center">
+                      <ion-card-subtitle class="ion-text-center">Project</ion-card-subtitle>
+                      <ion-card-title class="ion-text-center">Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
+                    </ion-card-header>
+                    <p class="ion-text-center">The project aim is to build a new credibility system called
+                      <br> SOCI-RANK using the module Admin
+                      to analyze the profile of user
+                      <br> to rank with the credibility score that helps to prevent proliferation of fake or
+                      
+                      malicious information
+                    </p>
+                  </ion-col>
+                    
+                  </ion-row>  
+                  <ion-row>
+                    <ion-col size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/role.png"></ion-img>
+                         <h1>Role:<strong>Team Leader</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                    <ion-col size="6" size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/timeperiod.png"></ion-img>
+                         <h1>Time Period: <strong>3 months</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12"  size-xs="12">
+                      <ion-text>Technologies Used:</ion-text>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12" size-xs="12">
+                      <ion-buttons class="ion-text-center">
+                        <ion-button>
+                          <ion-icon name="logo-github"></ion-icon>
+                         </ion-button>
+                         <ion-button>
+                          <ion-icon name="logo-linkedin"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-facebook"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-twitter"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-instagram"></ion-icon>
+                         </ion-button>
+                      </ion-buttons>
+                    </ion-col>
+                  </ion-row>
+               
+                  <ion-row>
+                    <ion-col size-md="12" size-xs="12">
+                      <ion-button expand="block">Visit Project</ion-button>
+                    </ion-col>
+                  </ion-row>
+              </ion-grid>
            
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-                <ion-col size="6">
-                  <ion-card>
-                    <ion-card-content>
-                       <ion-img src="assets/img/timeperiod.png"></ion-img>
-                     <h1>Time Period: <strong>3 months</strong></h1>
-           
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-title>Technologies Used:</ion-title>
-                </ion-col>
-                <ion-col size="12">
-                  <ion-buttons class="ion-text-center">
-                    <ion-button>
-                      <ion-icon name="logo-github"></ion-icon>
-                     </ion-button>
-                     <ion-button>
-                      <ion-icon name="logo-linkedin"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-facebook"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-twitter"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-instagram"></ion-icon>
-                     </ion-button>
-                  </ion-buttons>
-                </ion-col>
-              </ion-row>
             </ion-card-content>
           </ion-card>
         </ion-slide>
         <ion-slide>
           <ion-card id="maincard">
             <ion-card-content>
-              <ion-card-header>
-                <ion-card-subtitle>Project</ion-card-subtitle>
-                <ion-card-title>Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
-              </ion-card-header>
-              <p>The project aim is to build a new credibility system called
-                <br> SOCI-RANK using the module Admin
-                to analyze the profile of user
-                <br> to rank with the credibility score that helps to prevent proliferation of fake or
-                
-                malicious information
-              </p>
-              <ion-row>
-                <ion-col size="6">
-                  <ion-card>
-                    <ion-card-content>
-                       <ion-img src="assets/img/role.png"></ion-img>
-                     <h1>Role:<strong>Team Leader</strong></h1>
+              <ion-grid>
+                <ion-row id="headerrow">
+                  <ion-col size-md="12" size-xs="12" class="ion-text-center">
+                    <ion-card-header class="ion-text-center">
+                      <ion-card-subtitle class="ion-text-center">Project</ion-card-subtitle>
+                      <ion-card-title class="ion-text-center">Credibility Analysis System For Assesing Information On Twitter</ion-card-title>
+                    </ion-card-header>
+                    <p class="ion-text-center">The project aim is to build a new credibility system called
+                      <br> SOCI-RANK using the module Admin
+                      to analyze the profile of user
+                      <br> to rank with the credibility score that helps to prevent proliferation of fake or
+                      
+                      malicious information
+                    </p>
+                  </ion-col>
+                    
+                  </ion-row>  
+                  <ion-row>
+                    <ion-col size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/role.png"></ion-img>
+                         <h1>Role:<strong>Team Leader</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                    <ion-col size="6" size-md="6" size-xs="6">
+                      <ion-card>
+                        <ion-card-content>
+                           <ion-img src="assets/img/timeperiod.png"></ion-img>
+                         <h1>Time Period: <strong>3 months</strong></h1>
+               
+                        </ion-card-content>
+                      </ion-card>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12"  size-xs="12">
+                      <ion-text>Technologies Used:</ion-text>
+                    </ion-col>
+                  </ion-row>
+                  <ion-row>
+                    <ion-col size="12" size-xs="12">
+                      <ion-buttons class="ion-text-center">
+                        <ion-button>
+                          <ion-icon name="logo-github"></ion-icon>
+                         </ion-button>
+                         <ion-button>
+                          <ion-icon name="logo-linkedin"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-facebook"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-twitter"></ion-icon>
+                         </ion-button>
+                         <ion-button >
+                          <ion-icon name="logo-instagram"></ion-icon>
+                         </ion-button>
+                      </ion-buttons>
+                    </ion-col>
+                  </ion-row>
+               
+                  <ion-row>
+                    <ion-col size-md="12" size-xs="12">
+                      <ion-button expand="block">Visit Project</ion-button>
+                    </ion-col>
+                  </ion-row>
+              </ion-grid>
            
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-                <ion-col size="6">
-                  <ion-card>
-                    <ion-card-content>
-                       <ion-img src="assets/img/timeperiod.png"></ion-img>
-                     <h1>Time Period: <strong>3 months</strong></h1>
-           
-                    </ion-card-content>
-                  </ion-card>
-                </ion-col>
-              </ion-row>
-              <ion-row>
-                <ion-col size="12">
-                  <ion-title>Technologies Used:</ion-title>
-                </ion-col>
-                <ion-col size="12">
-                  <ion-buttons class="ion-text-center">
-                    <ion-button>
-                      <ion-icon name="logo-github"></ion-icon>
-                     </ion-button>
-                     <ion-button>
-                      <ion-icon name="logo-linkedin"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-facebook"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-twitter"></ion-icon>
-                     </ion-button>
-                     <ion-button >
-                      <ion-icon name="logo-instagram"></ion-icon>
-                     </ion-button>
-                  </ion-buttons>
-                </ion-col>
-              </ion-row>
             </ion-card-content>
           </ion-card>
         </ion-slide>
       </ion-slides>
-    </ion-row>
-  </ion-grid>
+   
 </ion-content>
